--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_native_splash: ^2.3.13
   go_router: ^13.2.0
   flutter_easyloading: ^3.0.5
+  pinput: ^4.0.0
 
 dev_dependencies:
   flutter_test:
