--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_native_splash: ^2.3.13
   go_router: ^13.2.0
   flutter_easyloading: ^3.0.5
-  pinput: ^4.0.0
+  pinput: ^2.2.31
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +39,7 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/illustrations/
+    - assets/banners/
 
   fonts:
     - family: PlusJakartaSans
