--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   go_router: ^13.2.0
   flutter_easyloading: ^3.0.5
   pinput: ^2.2.31
+  barcode: ^2.2.6
 
 dev_dependencies:
   flutter_test:
@@ -58,3 +59,7 @@ flutter:
           weight: 700
         - asset: assets/fonts/PlusJakartaSans-ExtraBold.ttf
           weight: 800
+
+    - family: OCRAExtended
+      fonts:
+        - asset: assets/fonts/OCRAExtended.ttf
